--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.11",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "typescript": "^3.2.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.119",
