--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.11",
+    "node-html-parser": "^1.1.11",
     "request": "^2.88.0",
     "typescript": "^3.2.2"
   },
